toy-load/deploy/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: toy-load
  namespace: default
  labels:
    app: toy-load
spec:
  selector:
    app: toy-load
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
